--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ https://templatemo.com/tm-563-seo-dream
   .marquee {
     width: 100%;
     padding: 2px;
-    background-color: #f1412a; /* Blue background color */
+    background-color: #3d3838a9; /* Blue background color */
     color: #ffffff; /* White text color */
     font-size: 24px;
     font-weight: bold;
@@ -195,7 +195,7 @@ window.onload = function() {
     top: 50%;
     transform: translateY(-50%);
     padding: 10px;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(56, 53, 53, 0.5);
     color: #fff;
     font-size: 18px;
     z-index: 1;
@@ -218,7 +218,7 @@ window.onload = function() {
   /* Slideshow container */
   .slideshow-container {
     position: relative;
-    max-width: 75%;
+    max-width: 50%;
     overflow: hidden;
   }
   
@@ -234,7 +234,7 @@ window.onload = function() {
     top: 50%;
     transform: translateY(-50%);
     padding: 10px;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(53, 49, 49, 0.5);
     color: #fff;
     z-index: 100;
   }
