--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ window.onload = function() {
           <!-- ***** Menu Start ***** -->
           <ul class="nav">
             <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
-            <li class="scroll-to-section"><a href="https://info.cloudpage.in">Info</a></li>
+            <li class="scroll-to-section"><a href='/info/index.html'>Info</a></li>    
             <li class="scroll-to-section"><a href="#services">Services</a></li>
             <li class="scroll-to-section"><a href="#contact">Contact Us</a></li> 
             <li class="scroll-to-section"><div class="main-blue-button"><a href="#contact">Get Your Quote</a></div></li> 
