--- a/info/index.html
+++ b/info/index.html
@@ -60,7 +60,7 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
                               <li class="nav-item active">
-                                 <a class="nav-link" href="https://www.cloudpage.in">Home</a>
+                                 <a class="nav-link" href="https://cloudpage.in">Home</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="#CloudPage-Offers"> About  </a>
@@ -88,7 +88,7 @@
                <div class="col-md-5">
                   <div class="text-bg">
                      <h1>Fast & Secure<br> Web Hosting</h1>
-                     <span>Landing Page 2023</span>
+                     <span>Landing Page 2024</span>
                      <p> "CloudPage has been instrumental in transforming your business operations. Seamless cloud infrastructure and data storage solutions have empowered clients to scale effortlessly, while our website hosting services ensure your online presence is always reliable." </p>
                      <a href="#service">Get Started</a>
                   </div>
@@ -294,7 +294,7 @@
          <div class="container">
              <div class="row">
                  <div class="col-md-6 offset-md-3">
-                  <form id="contact" action="https://formsubmit.co/cloudpagecare@gmail.com" method="post">
+                  <form id="contactForm" class="main_form" action="https://formsubmit.co/cloudpagecare@gmail.com" method="POST">
                          <div class="row">
                              <div class="col-sm-12">
                                  <input class="contactus" placeholder="Name" type="text" name="Name" id="name" required>
@@ -328,7 +328,7 @@
                   <div class="col-md-10 offset-md-1">
                      <div class="cont">
                         <h3>Contact now</h3>
-                        <span>prasad@cloudpage.in</span>
+                        <span>info@cloudpage.in</span>
                         <p>
                            Contact CloudPage now! Reach out to us to unlock top-notch hosting solutions, exceptional support, and take your digital journey to new heights.
                         </p>
@@ -340,7 +340,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>© 2023 All Rights Reserved. <a href="https://www.cloudpage.in">CloudPage.in</a></p>
+                        <p>© 2024 All Rights Reserved. <a href="https://www.cloudpage.in">CloudPage.in</a></p>
                      </div>
                   </div>
                </div>
