--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ window.onload = function() {
               </div>
             </li>
             <!-- End of Dropdown Menu -->
-            <li class="scroll-to-section"><div class="main-blue-button"><a href="#contact">Get Your Quote</a></div></li>
+            <li class="scroll-to-section"><div class="main-black-button"><a href="#contact">Get Your Quote</a></div></li>
           </ul>        
           <a class='menu-trigger'>
               <span>Menu</span>
