--- a/index.html
+++ b/index.html
@@ -399,8 +399,7 @@ window.onload = function() {
             <li class="dropdown">
               <a href="#" class="dropbtn">Useful Links &#9662;</a>
               <div class="dropdown-content">
-                <a href="https://eportal.incometax.gov.in/iec/foservices/#/pre-login/instant-e-pan/getNewEpan" target="_blank">Instanr PAN</a>
-                <a href="https://eportal.incometax.gov.in/iec/foservices/#/pre-login/instant-e-pan/checkStatusDownloadEpan" target="_blank">Download e-PAN</a>
+                <a href="https://eportal.incometax.gov.in/iec/foservices/#/pre-login/instant-e-pan/getNewEpan" target="_blank">Instant e-PAN</a>
                 <a href="https://myaadhaar.uidai.gov.in/genricDownloadAadhaar" target="_blank">Aadhar Download</a>
               </div>
             </li>
