--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ https://templatemo.com/tm-563-seo-dream
   <!-- Marquee (Scrolling Text) -->
   <div class="marquee">
     <marquee behavior="scroll" direction="left" scrollamount="10">
-     \\// Vote for the GLASS ♥ Jai JanaSena  ♥ Jai PawanKalyan \\//
+     \\// Welcome to CLOUDPAGE World \\//
     </marquee>
   </div>
   
