--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@ window.onload = function() {
       <div class="col-lg-12">
         <p>Copyright © 2025 CloudPage Ltd. All Rights Reserved. 
         
-        <br>Web Designed by <a rel="nofollow" href="https://cloudpage.in" title="cloudpage">CloudPage</p>
+        <br>Web Designed by <a rel="nofollow" href="https://cloudpage.in" title="cloudPage">CloudPage</p>
       </div>
     </div>
   </div>
