--- a/bg_remove/index_bkp.html
+++ b/bg_remove/index_bkp.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>AI Image Editor</title>
+  <title>Intelligent Background Remover</title>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.20.0/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/body-pix@2.2.0"></script>
   <style>
@@ -40,7 +40,7 @@
   </style>
 </head>
 <body>
-  <h2>AI-Powered Image Editor</h2>
+  <h2>AI-Powered Image Background Editor</h2>
 
   <label>Upload Foreground Image</label><br>
   <input type="file" id="fgInput" accept="image/*"><br><br>
@@ -58,15 +58,6 @@
   <input type="range" min="5" max="100" value="15" id="eraserSize" onchange="updateEraserSize()">
   <span id="eraserSizeValue">15</span><br><br>
 
-  <!-- Photoshop-like Tools -->
-  <button class="btn" onclick="flipImage('horizontal')">Flip Horizontal</button>
-  <button class="btn" onclick="flipImage('vertical')">Flip Vertical</button>
-  <button class="btn" onclick="rotateImage()">Rotate</button>
-  <label>Brightness</label>
-  <input type="range" min="-100" max="100" value="0" id="brightness" oninput="applyFilters()">
-  <label>Contrast</label>
-  <input type="range" min="-100" max="100" value="0" id="contrast" oninput="applyFilters()"><br><br>
-
   <canvas id="canvas" width="600" height="400"></canvas>
 
   <div id="status"></div>
@@ -79,8 +70,7 @@
 4. Drag the Foreground Image to reposition.
 5. Click "Remove Background" to use AI for smart background removal.
 6. Use the "Eraser" to manually erase parts of the image. Adjust size with slider.
-7. Use Photoshop tools to Flip, Rotate, Adjust Brightness & Contrast.
-8. Click "Download PNG" to save the final output.
+7. Click "Download PNG" to save the final output.
   </textarea>
 
   <script>
@@ -98,8 +88,6 @@
     let offset = { x: 0, y: 0 };
     let eraseMode = false;
     let eraserSize = 15;
-    let rotation = 0;
-    let flipX = 1, flipY = 1;
 
     const statusEl = document.getElementById('status');
 
@@ -186,12 +174,9 @@
       if (fgLoaded) {
         ctx.save();
         ctx.translate(pos.x, pos.y);
-        ctx.scale(scale * flipX, scale * flipY);
-        ctx.rotate(rotation);
-        ctx.filter = `brightness(${100 + parseInt(document.getElementById('brightness').value)}%) contrast(${100 + parseInt(document.getElementById('contrast').value)}%)`;
+        ctx.scale(scale, scale);
         ctx.drawImage(fgCanvas, -fgCanvas.width / 2, -fgCanvas.height / 2);
         ctx.restore();
-        ctx.filter = 'none';
       }
     }
 
@@ -219,6 +204,7 @@
         const partId = segmentation.data[i];
         const off = i * 4;
 
+        // Keep all body parts, remove only background (partId === -1)
         if (partId !== -1) {
           newImageData.data[off] = imageData.data[off];
           newImageData.data[off + 1] = imageData.data[off + 1];
@@ -248,8 +234,7 @@
 
       octx.save();
       octx.translate(pos.x, pos.y);
-      octx.scale(scale * flipX, scale * flipY);
-      octx.rotate(rotation);
+      octx.scale(scale, scale);
       octx.drawImage(fgCanvas, -fgCanvas.width / 2, -fgCanvas.height / 2);
       octx.restore();
 
@@ -257,21 +242,6 @@
       link.download = 'output.png';
       link.href = output.toDataURL('image/png');
       link.click();
-    }
-
-    function flipImage(direction) {
-      if (direction === 'horizontal') flipX *= -1;
-      else if (direction === 'vertical') flipY *= -1;
-      draw();
-    }
-
-    function rotateImage() {
-      rotation += Math.PI / 2;
-      draw();
-    }
-
-    function applyFilters() {
-      draw();
     }
   </script>
 </body>
