--- a/index.html
+++ b/index.html
@@ -397,6 +397,7 @@ window.onload = function() {
                 <a href="https://eportal.incometax.gov.in/iec/foservices/#/pre-login/instant-e-pan/getNewEpan" target="_blank">Instant e-PAN</a>
                 <a href="https://myaadhaar.uidai.gov.in/genricDownloadAadhaar" target="_blank">Aadhar Download</a>
                 <a href="/bg_remove/index.html" target="_blank">RemoveBG</a>
+                <a href="/video/index.html" target="_blank">Video</a>
               </div>
             </li>
             <!-- End of Dropdown Menu -->
