--- a/Backup/index.html
+++ b/Backup/index.html
@@ -396,6 +396,8 @@ window.onload = function() {
               <div class="dropdown-content">
                 <a href="https://eportal.incometax.gov.in/iec/foservices/#/pre-login/instant-e-pan/getNewEpan" target="_blank">Instant e-PAN</a>
                 <a href="https://myaadhaar.uidai.gov.in/genricDownloadAadhaar" target="_blank">Aadhar Download</a>
+                <a href="/bg_remove/index.html" target="_blank">RemoveBG</a>
+                <a href="/video/index.html" target="_blank">Video</a>
               </div>
             </li>
             <!-- End of Dropdown Menu -->
