--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CloudPage - Authentic</title>
+    <title>CloudPage</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4279482061639450"
      crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -19,10 +19,6 @@
             <i class="fas fa-home"></i>
             <span>Home</span>
         </div>
-        <div class="nav-item" onclick="window.location.href='videos.html'">
-            <i class="fas fa-video"></i>
-            <span>Videos</span>
-        </div>
         <div class="nav-item" onclick="window.location.href='services.html'">
             <i class="fas fa-laptop"></i>
             <span>Services</span>
@@ -35,9 +31,9 @@
             <i class="fas fa-envelope"></i>
             <span>Contact</span>
         </div>
-        <div class="nav-item" onclick="window.open('https://cloudpage.in', '_blank')">
-            <i class="fas fa-external-link-alt"></i>
-            <span>External</span>
+        <div class="nav-item" onclick="window.location.href='videos.html'">
+            <i class="fas fa-video"></i>
+            <span>Videos</span>
         </div>
     </nav>
 
@@ -55,39 +51,125 @@
         <!-- Gallery Section -->
         <section class="gallery-section">
             <div class="gallery-container">
-                <h2 class="section-title">Image Gallery</h2>
+                <h2 class="section-title">Transform Your Digital Experience</h2>
                 <p class="section-description">
-                    Authentic is a free website template by <a href="https://cloudpage.in" target="_blank">CloudPage</a>. 
-                    You may download and apply this template for any purpose. 
-                    Credits go to Font Awesome for icons and Unsplash for images.
+                    Discover the power of cloud computing with CloudPage - Your gateway to seamless digital transformation
                 </p>
 
-                <!-- Main Gallery Display -->
-                <div class="main-gallery">
-                    <div class="gallery-main-image">
-                        <img src="img/gallery/nature-01.jpg" alt="Gallery Image" id="mainImage">
+                <!-- Hero Features -->
+                <div class="hero-features">
+                    <div class="hero-feature">
+                        <div class="hero-number">1M+</div>
+                        <p>Files Stored Securely</p>
+                    </div>
+                    <div class="hero-feature">
+                        <div class="hero-number">99.9%</div>
+                        <p>Uptime Guarantee</p>
+                    </div>
+                    <div class="hero-feature">
+                        <div class="hero-number">24/7</div>
+                        <p>Customer Support</p>
+                    </div>
+                    <div class="hero-feature">
+                        <div class="hero-number">10K+</div>
+                        <p>Happy Customers</p>
                     </div>
                 </div>
 
-                <!-- Thumbnail Gallery -->
-                <div class="thumbnail-gallery">
-                    <div class="thumbnail-item active">
-                        <img src="img/gallery/nature-01.jpg" alt="Nature 1" onclick="changeImage(this)">
+                <!-- Main Value Propositions -->
+                <div class="value-props">
+                    <div class="value-card featured">
+                        <div class="value-icon">
+                            <i class="fas fa-rocket"></i>
+                        </div>
+                        <h3>Lightning Fast Performance</h3>
+                        <p>Experience blazing-fast cloud infrastructure powered by cutting-edge technology. Deploy your applications in seconds and scale instantly to meet demand.</p>
                     </div>
-                    <div class="thumbnail-item">
-                        <img src="img/gallery/nature-02.jpg" alt="Nature 2" onclick="changeImage(this)">
+
+                    <div class="value-card featured">
+                        <div class="value-icon">
+                            <i class="fas fa-lock"></i>
+                        </div>
+                        <h3>Bank-Grade Security</h3>
+                        <p>Your data is protected with military-grade encryption, multi-factor authentication, and regular security audits. Sleep peacefully knowing your information is safe.</p>
                     </div>
-                    <div class="thumbnail-item">
-                        <img src="img/gallery/building-01.jpg" alt="Building 1" onclick="changeImage(this)">
+
+                    <div class="value-card featured">
+                        <div class="value-icon">
+                            <i class="fas fa-chart-line"></i>
+                        </div>
+                        <h3>Scale Without Limits</h3>
+                        <p>Start small and grow big. Our elastic cloud infrastructure automatically scales with your business needs, ensuring optimal performance at all times.</p>
                     </div>
-                    <div class="thumbnail-item">
-                        <img src="img/gallery/portrait-01.jpg" alt="Portrait 1" onclick="changeImage(this)">
+                </div>
+
+                <!-- Why Choose Us Section -->
+                <div class="why-choose-section">
+                    <h3 class="subsection-title">Why Thousands Choose CloudPage</h3>
+                    <div class="benefits-grid">
+                        <div class="benefit-item">
+                            <i class="fas fa-check-circle"></i>
+                            <span>Instant Setup - Get started in minutes</span>
+                        </div>
+                        <div class="benefit-item">
+                            <i class="fas fa-check-circle"></i>
+                            <span>No Hidden Fees - Transparent pricing</span>
+                        </div>
+                        <div class="benefit-item">
+                            <i class="fas fa-check-circle"></i>
+                            <span>Free Migration - We move your data</span>
+                        </div>
+                        <div class="benefit-item">
+                            <i class="fas fa-check-circle"></i>
+                            <span>Expert Support - Real humans, real help</span>
+                        </div>
+                        <div class="benefit-item">
+                            <i class="fas fa-check-circle"></i>
+                            <span>Auto Backups - Never lose your data</span>
+                        </div>
+                        <div class="benefit-item">
+                            <i class="fas fa-check-circle"></i>
+                            <span>Global CDN - Fast worldwide access</span>
+                        </div>
                     </div>
-                    <div class="thumbnail-item">
-                        <img src="img/gallery/animal-01.jpg" alt="Animal 1" onclick="changeImage(this)">
+                </div>
+
+                <!-- Use Cases -->
+                <div class="use-cases">
+                    <h3 class="subsection-title">Perfect For Every Need</h3>
+                    <div class="use-case-grid">
+                        <div class="use-case-card">
+                            <i class="fas fa-briefcase"></i>
+                            <h4>Businesses</h4>
+                            <p>Host websites, run applications, and manage your entire digital infrastructure</p>
+                        </div>
+                        <div class="use-case-card">
+                            <i class="fas fa-user-tie"></i>
+                            <h4>Developers</h4>
+                            <p>Deploy code, test applications, and build the next big thing with our tools</p>
+                        </div>
+                        <div class="use-case-card">
+                            <i class="fas fa-heart"></i>
+                            <h4>Personal Use</h4>
+                            <p>Store memories, share wishes, and keep your digital life organized</p>
+                        </div>
+                        <div class="use-case-card">
+                            <i class="fas fa-graduation-cap"></i>
+                            <h4>Students</h4>
+                            <p>Learn cloud technologies with our training resources and free tier</p>
+                        </div>
                     </div>
-                    <div class="thumbnail-item">
-                        <img src="img/gallery/nature-03.jpg" alt="Nature 3" onclick="changeImage(this)">
+                </div>
+
+                <!-- Testimonial Section -->
+                <div class="testimonial-section">
+                    <div class="testimonial-card">
+                        <div class="quote-icon"><i class="fas fa-quote-left"></i></div>
+                        <p class="testimonial-text">"CloudPage transformed how we manage our digital infrastructure. The speed and reliability are unmatched!"</p>
+                        <div class="testimonial-author">
+                            <strong>A Vinod Kumar</strong>
+                            <span>Tech Startup Founder</span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -97,11 +179,11 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="social-links">
-            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.linkedin.com/in/cloudpage/" target="_blank" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.facebook.com/cloudpage.in/" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/cloudpage.in" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
             <a href="#" class="social-icon"><i class="fab fa-google-plus-g"></i></a>
             <a href="#" class="social-icon"><i class="fab fa-dribbble"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
         </div>
         <p class="copyright">Copyright &copy; 2026 CloudPage Service</p>
     </footer>
