--- a/about.html
+++ b/about.html
@@ -19,10 +19,6 @@
             <i class="fas fa-home"></i>
             <span>Home</span>
         </div>
-        <div class="nav-item" onclick="window.location.href='videos.html'">
-            <i class="fas fa-video"></i>
-            <span>Videos</span>
-        </div>
         <div class="nav-item" onclick="window.location.href='services.html'">
             <i class="fas fa-laptop"></i>
             <span>Services</span>
@@ -35,9 +31,9 @@
             <i class="fas fa-envelope"></i>
             <span>Contact</span>
         </div>
-        <div class="nav-item" onclick="window.open('https://cloudpage.in', '_blank')">
-            <i class="fas fa-external-link-alt"></i>
-            <span>External</span>
+        <div class="nav-item" onclick="window.location.href='videos.html'">
+            <i class="fas fa-video"></i>
+            <span>Videos</span>
         </div>
     </nav>
 
@@ -85,11 +81,11 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="social-links">
-            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.facebook.com/profile.php?viewas=100000686899395&id=61575153363122" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.linkedin.com/in/cloudpage/" target="_blank" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.facebook.com/cloudpage.in/" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/cloudpage.in" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
             <a href="#" class="social-icon"><i class="fab fa-google-plus-g"></i></a>
             <a href="#" class="social-icon"><i class="fab fa-dribbble"></i></a>
-            <a href="https://www.instagram.com/cloudwithmind/" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
         </div>
         <p class="copyright">Copyright &copy; 2026 CloudPage Service</p>
     </footer>
